--- a/bookkeeping.html
+++ b/bookkeeping.html
@@ -65,7 +65,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 					<div class="inner">
 						<header class="major">
 							<h2 style="color: #228ea6;">What's included?</h2>
-								<p>If you already use <a href="https://pdmarfleet.co.uk/#ExpensePlus">ExpensePlus</a> fund accounting software and are thinking about outsourcing your bookkeeping, then we'll start with a free, no-obligation consultation via Zoom. This will enable me to learn more about you, your organisation, and your current ExpensePlus account setup in greater depth. As each organisation's bookkeeping is unique, the fees I charge may vary upwards from a base price of £545 per month. However, if I assess your accounts to be very simple or if you are a very small organisation, I may be able to offer a lower price to accommodate your needs. At the end of this session, I should be able to confirm the package price for you.</p>
+								<p>If you already use <a href="https://pdmarfleet.co.uk/#ExpensePlus">ExpensePlus</a> fund accounting software and are thinking about outsourcing your bookkeeping, then we'll start with a free, no-obligation consultation via Zoom. This will enable me to learn more about you, your organisation, and your current ExpensePlus account setup in greater depth. As each organisation's bookkeeping is unique, the fees I charge may vary upwards from a base price of £545 per month, for organisations with an income below £250k. However, if I assess your accounts to be very simple or if you are a very small organisation, I may be able to offer a lower price to accommodate your needs.</p>
 								
 						</header>		
 					</div>
