--- a/bookkeeping.html
+++ b/bookkeeping.html
@@ -90,7 +90,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 														
 									<li>
 										<p style="color:#ffffff!important;">​Charity income over £1M: </p>
-										<p style="color:#ffffff!important;">&#8226; £980-£1,200pm+</p>	
+										<p style="color:#ffffff!important;">&#8226; £980-£1,200pm</p>	
 									</li>
 									<li>
 										<p style="color:#ffffff!important;">​For charities under £50k:</p>
