--- a/Training-Support.html
+++ b/Training-Support.html
@@ -95,6 +95,7 @@
 										<div class="popup">
 											<h2>Custom Online Training & Conusltation Package</h2>
 											<a class="close" href="#">&times;</a>
+											<a class="close topright" href="#">&times;</a>
 											<div class="content">
 									<p>Below are the standard day rates for this additional training, support or consultation. Please get in touch and I’ll be able to give you an idea of how much time I think we’ll need for the help you are looking for.</p>
 									<p>​Charity income under £250k: £250-£350 per day</p>
