--- a/Training-Support.html
+++ b/Training-Support.html
@@ -94,7 +94,6 @@
 									<div id="popup1" class="overlay">
 										<div class="popup">
 											<h2>Custom Online Training & Conusltation Package</h2>
-											<a class="close" href="#">&times;</a>
 											<a class="close topright" href="#">&times;</a>
 											<div class="content">
 									<p>Below are the standard day rates for this additional training, support or consultation. Please get in touch and I’ll be able to give you an idea of how much time I think we’ll need for the help you are looking for.</p>
@@ -125,6 +124,7 @@
 										<div class="popup">
 											<h2>Migration Support Package from £750</h2>
 											<a class="close" href="#">&times;</a>
+											<a class="close topright" href="#">&times;</a>
 											<div class="content">
 												<p>We will start with a free, no-obligation consultation via Zoom. This will enable me to learn more about you, your organisation, and your current accounting setup in greater depth.</p> 
 									<p>Each organisation's migration to ExpensePlus is unique, so the fees I charge vary from the basic package price of £750, depending on your organisation's income. In addition, if your accounts require significantly more work than usual before they can be transferred to ExpensePlus, the package price could increase. However, if I think your accounts are simple to migrate or you are a very small organisation (income less than £50K), I may be able to offer a rate lower than the base price ranges listed below.</p>
