--- a/bookkeeping.html
+++ b/bookkeeping.html
@@ -99,6 +99,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 								
 						</ul>
 						<a class="close topright" href="#">&times;</a>
+						<a class="close" href="#">&times;</a>
 						</header>	
 					</div>	
 				</div>	
