--- a/Training-Support.html
+++ b/Training-Support.html
@@ -84,16 +84,16 @@
 							<ul class="features">
 								<li>
 									<header class="package">
-									<h3>Custom Online Training Package</h3>
+									<h3>Remote Conusltation Packages</h3>
 									</header>
 									<p>from £250 per day</p>
-									<p>With this option, I’ll put together a custom training package based on what questions you need answering.</p>
-									<p>For example, it could vary from a 2 hour session with me to help your bookkeeper understand the basics of managing your accounts in ExpensePlus, or 1/2 a day training online for your wider team or a full day with a mix of both. It really is up to you to say how I can help.</p>
+									<p>With this option, I’ll put together a custom consultation package based on the support you need.</p>
+									<p>For example, it could vary from a 2 hour session with me to help your bookkeeper understand the basics of managing your accounts in ExpensePlus, or 1/2 a day training online for your wider team or a full day consulting on your fund architecture. It really is up to you to say how I can help.</p>
 									<a class="button" href="#popup1">More Info</a>
 																
 									<div id="popup1" class="overlay">
 										<div class="popup">
-											<h2>Custom Online Training & Conusltation Package</h2>
+											<h2>Custom Remote Conusltation Packages</h2>
 											<a class="close topright" href="#">&times;</a>
 											<div class="content">
 									<p>Below are the standard day rates for this additional training, support or consultation. Please get in touch and I’ll be able to give you an idea of how much time I think we’ll need for the help you are looking for.</p>
