--- a/Training-Support.html
+++ b/Training-Support.html
@@ -162,7 +162,7 @@
 										<p>&#8226; The setup of ExpensePlus including User Accounts, Opening Balances, Bank Accounts, Funds, Budget Categories, and Invoice Templates.</p>
 										<p>&#8226; I'll oversee ‘going live’ on ExpensePlus, and will monitor and adjust the setup as necessary.</p>
 										<p>&#8226; The provision of basic ExpensePlus training for internal stakeholders (Basic Users, Finance Assistants, Budget Holders & Trustees) in the form of high quality, on-demand video training.</p>
-										<p>&#8226; With the migration complete, I’ll do a comprehensive handover with your bookkeeper during a 2-hour training package via Microsoft Teams. Alternatively, <a href="bookkeeping.html">you may decide to outsource your bookkeeping to me to at this stage</a> to free up your team.</p>
+										<p>&#8226; With the migration complete, I’ll do a comprehensive handover with your bookkeeper during a 2-hour training package via Zoom. Alternatively, <a href="bookkeeping.html">you may decide to outsource your bookkeeping to me to at this stage</a> to free up your team.</p>
 										<p>&#8226; Finally, I’ll provide 1 month of priority email support for your team if they have any further questions.</p>
 										<p>&#8226; Of course, if you find you need adhoc support beyond this, you can easily access it via my <a href="https://pdmarfleet.co.uk/training-support#popup1">custom online support packages here.</a></p>
 									
