--- a/Training-Support.html
+++ b/Training-Support.html
@@ -93,7 +93,7 @@
 																
 									<div id="popup1" class="overlay">
 										<div class="popup">
-											<h2>Custom Remote Conusltation Packages</h2>
+											<h2>Remote Conusltation Packages</h2>
 											<a class="close topright" href="#">&times;</a>
 											<div class="content">
 									<p>Below are the standard day rates for this additional training, support or consultation. Please get in touch and I’ll be able to give you an idea of how much time I think we’ll need for the help you are looking for.</p>
