--- a/bookkeeping.html
+++ b/bookkeeping.html
@@ -184,7 +184,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 							<h2>Do you provide payroll as part of this package?</h2>
 							<a class="close" href="#three">&times;</a>
 							<div class="content">
-								<p>If you need a payroll provider, I can provide that through a third party payroll company that I work with. Please ask for details at your initial consultation with me.</p>
+								<p>I don't provide a payroll service but if you need a payroll provider, I can recommend an affordable payroll company that I partner with. Please ask for details at your initial consultation with me.</p>
 								<div class="center-button" >
 									<a href="contact.html" class="button fit primary" style="margin-bottom: 2em;">Enquire</a></br>
 								</div>
