--- a/Policies.html
+++ b/Policies.html
@@ -64,6 +64,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 									<div class="popup">
 										<h2>PD Marfleet Accounting - Privacy Statement</h2>
 										<a class="close" href="#">&times;</a>
+										<a class="close topright" href="#">&times;</a>
 										<div class="content">
 									<p>This privacy statement is a summary of our Privacy Policy and will explain how we uses the personal data we collect from you when you use our website.</p>
 									<h3>What data do we collect?</h3>
@@ -119,6 +120,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 									<div class="popup">
 										<h2>PD Marfleet Accounting - Privacy Policy</h2>
 										<a class="close" href="#">&times;</a>
+										<a class="close topright" href="#">&times;</a>
 										<div class="content">
 										<h3>Introduction</h3>
 										<p>PD Marfleet Accounting needs to gather and use certain information about individuals.
