--- a/bookkeeping.html
+++ b/bookkeeping.html
@@ -64,7 +64,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 					<div class="inner">
 						<header class="major">
 							<h2 style="color: #228ea6;">What's included?</h2>
-								<p>If you already use <a href="https://pdmarfleet.co.uk/#ExpensePlus">ExpensePlus</a> fund accounting software and are thinking about outsourcing your bookkeeping, then we'll start with a free, no-obligation consultation via Zoom. This will enable me to learn more about you, your organisation, and your current ExpensePlus account setup in greater depth. As each organisation's bookkeeping is unique, the fees I charge may vary upwards from a base price of £545 per month, for organisations with an income below £250k. However, if I assess your accounts to be very simple or if you are a very small organisation, I may be able to offer a lower price to accommodate your needs.</p>
+								<p>If you are looking to outsource you bookkeeping after I’ve migrated you to <a href="https://pdmarfleet.co.uk/#ExpensePlus">ExpensePlus</a> fund accounting software, or you already use ExpensePlus, then we will begin with a free, no-obligation consultation via Zoom. This will allow me to get a better understanding of you, your organisation, and your current ExpensePlus account setup. Since each organisation's bookkeeping needs are unique, my fees may vary starting from a base price of £545 per month for organisations with an income below £250k. However, if your accounts are very simple or if you are a very small organisation, I may be able to offer a lower price for you.</p>
 								
 								<a class="button" href="#popup-price"style="color:#228ea6!important;">See Bookkeeping Prices here</a>
 								<div id="popup-price" class="overlay">
