--- a/Training-Support.html
+++ b/Training-Support.html
@@ -135,20 +135,20 @@
 								<ul class="package-price" sytle="text-align:centre"> 
 										<li>
 											<p>​Charity income under £250k:</p>
-											<p>&#8226; £750-£1,750</p>
+											<p>£750-£1,750</p>
 										</li>
 										<li>
 											<p>​Charity income over £250k:</p>
-											<p>&#8226; £1,750-£3,600</p>
+											<p>£1,750-£3,600</p>
 										</li>
 															
 										<li>
 											<p>​Charity income over £1M: </p>
-											<p>&#8226; £3,600+</p>	
+											<p>£3,600+</p>	
 										</li>
 										<li>
 											<p>​For charities under £50k:</p>
-											<p>&#8226; Reduced rates may be avaialble, <a href="contact.html">let's talk</a></p>
+											<p>Reduced rates may be avaialble, <a href="contact.html">let's talk</a></p>
 										</li>
 									
 							</ul>
