--- a/Training-Support.html
+++ b/Training-Support.html
@@ -96,7 +96,7 @@
 											<h2>Remote Consultation Packages</h2>
 											<a class="close topright" href="#">&times;</a>
 											<div class="content">
-												<p>Below are the standard day rates for my additional training, support or consultation. Please get in touch and I’ll be able to give you an idea of how much time I think we’ll need for the help you are looking for.</p>
+												<p>Below are the standard day rates for my additional training & support. Please get in touch and I’ll be able to give you an idea of how much time I think we’ll need for the help you are looking for.</p>
 												<section id="Reviews" style="margin-top:-200px; margin-bottom: 250px"></section>
 					
 												<div class="inner">
