--- a/bookkeeping.html
+++ b/bookkeeping.html
@@ -66,7 +66,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 							<h2 style="color: #228ea6;">What's included?</h2>
 								<p>My Bookkeeping & Consultation Package is designed for organisations seeking a cost-effective charity bookkeeping solution along with experienced advice on all aspects of charity accounting best practice. This package not only guarantees accurate and efficient bookkeeping using <a href="https://pdmarfleet.co.uk/#ExpensePlus">ExpensePlus</a> cloud based fund accounting software, but also focuses on collaborating with you to establish a future-proof finance system that can accommodate growth of your organisation, whether you’ve a small annual income, or one approaching £1Million. As we work together, I will provide consultation on topics such as your financial controls policy, the most effective way to create budgets, and I’ll help audit your financial practices. </p>
 								<div class="inner">
-									<p>If you're interested in this solution, we can begin with a free, no-obligation consultation via Zoom. This will help me gain a better understanding of you, your organisation, and your current ExpensePlus account setup, enabling me to provide you with an accurate quote. In the meantime, please refer to the base price ranges below to get an idea of the costs involved.</p>
+									<p>If you're interested in this solution, we'll begin with a free, no-obligation consultation via Zoom. This will help me gain a better understanding of you, your organisation, and your current ExpensePlus* account setup, enabling me to provide you with an accurate quote. In the meantime, please refer to the base price ranges below to get an idea of the costs involved.</p>
 										</div>
 								<a class="button" href="#popup-price"style="color:#ffffff!important; background-color:#46b2cc!important; margin-top:1.5em">See Bookkeeping Prices here</a>
 								<div id="popup-price" class="overlay">
@@ -113,7 +113,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 					
 					</header>					
 					<div class="inner">
-						<p style="margin: -1em 0 0 0!important;">If you're not currently using ExpensePlus for your bookkeeping, it's not a problem.</p>
+						<p style="margin: -1em 0 0 0!important;">*If you're not currently using ExpensePlus for your bookkeeping, it's not a problem.</p>
 							<p style="padding-bottom:2em!important;"><a href="Training-Support.html">I can migrate you onto the system</a> before starting this service.</p>
 							</div>
 				</section>	
