--- a/bookkeeping.html
+++ b/bookkeeping.html
@@ -113,8 +113,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 					
 					</header>					
 					<div class="inner">
-						<p style="margin: -1em 0 0 0!important;">*If you're not currently using ExpensePlus for your bookkeeping, it's not a problem.</p>
-							<p style="padding-bottom:2em!important;"><a href="Training-Support.html">I can migrate you onto the system</a> before starting this service.</p>
+						<p style="margin: -1em 0 0 0!important;font-size: 15px!important;">*If you're not currently using ExpensePlus for your bookkeeping, it's not a problem.</p>
+							<p style="padding-bottom:2em!important;font-size: 15px!important;"><a href="Training-Support.html">I can migrate you onto the system</a> before starting this service.</p>
 							</div>
 				</section>	
 
