--- a/bookkeeping.html
+++ b/bookkeeping.html
@@ -54,7 +54,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 					<article id="main">
 						<header>
 							<img src="images/ExpensePlus-cloud-accounting-software-for-charities.jpg" style="border-radius: 1em; margin-bottom: 20px;" width="50%">
-							<p>Outsourced Bookkeeping with Consultation</p>
+							<p>Outsourced Bookkeeping & Consultation</p>
 							<p style="text-transform: lowercase;">from £545 per month </p>
 							
 						</header>
