--- a/bookkeeping.html
+++ b/bookkeeping.html
@@ -71,7 +71,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 								<a class="button" href="#popup-price"style="color:#ffffff!important; background-color:#46b2cc!important; margin-top:1.5em">See Bookkeeping Prices here</a>
 								<div id="popup-price" class="overlay">
 									<div class="popup">
-										<h2 style="color:#ffffff;">Bookkeeping with Consultation</h2>
+										<h2 style="color:#ffffff;">Bookkeeping & Consultation Package</h2>
 										<p style="color:#ffffff!important; font-size: 20px!important;">Packages from £545 per month</p>
 										
 										<div class="content">
