--- a/bookkeeping.html
+++ b/bookkeeping.html
@@ -122,7 +122,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 	<section id="two" class="wrapper alt style2">
 		<section class="spotlight">
 			<div class="image"><img src="images/ExpensePlus-outsourced-bookkeeping-for-charities.jpg" alt="" /></div><div class="content">
-				<p style="text-align: center;">If you choose to go ahead, I will then create a customised weekly bookkeeping process for us. This will clearly define how I will collaborate with your team to ensure that the bookkeeping happens seamlessly in the background for you. Each week, I will check the digitally uploaded receipts, set up payments that you have approved, make adjustments as needed, and reconcile the books.</p>
+				<p style="text-align: center;">Once you choose to go ahead, I will then create a customised weekly bookkeeping process for us. This will clearly define how I will collaborate with your team to ensure that the bookkeeping happens seamlessly in the background for you. Each week, I will check the digitally uploaded receipts, set up payments that you have approved, make adjustments as needed, and reconcile the books.</p>
 			</div>
 		</section>
 		<section class="spotlight">
