--- a/bookkeeping.html
+++ b/bookkeeping.html
@@ -165,7 +165,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 							<h2>What if we don’t use ExpensePlus, can you do our bookkeeping still?</h2>
 							<a class="close" href="#three">&times;</a>
 							<div class="content">
-					<p>My services are only available to charities and non-profit organisations using ExpensePlus. However, if your organisation is not yet using ExpensePlus, <a href="Training-Support.html">I can assist in migrating your accounting system</a> to the platform before taking on your bookkeeping for you.</p>
+					<p>My services are only available to charities and non-profit organisations using ExpensePlus. However, if your organisation is not yet using ExpensePlus, <a href="https://pdmarfleet.co.uk/training-support#popup2">I can assist in migrating your accounting system</a> to the platform before taking on your bookkeeping for you.</p>
 					<div class="center-button" >
 						<a href="contact.html" class="button fit primary" style="margin-bottom: 2em;">Enquire</a>
 						</div>
