--- a/bookkeeping.html
+++ b/bookkeeping.html
@@ -162,7 +162,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 				</div>						
 					<div id="popup2" class="overlay">
 						<div class="popup">
-							<h2>But we don’t use ExpensePlus, can you do our bookkeeping still?</h2>
+							<h2>What if we don’t use ExpensePlus, can you do our bookkeeping still?</h2>
 							<a class="close" href="#three">&times;</a>
 							<div class="content">
 					<p>My services are only available to charities and non-profit organisations using ExpensePlus. However, if your organisation is not yet using ExpensePlus, <a href="https://pdmarfleet.co.uk/training-support#popup2">I can assist in migrating your accounting system</a> to the platform before taking on your bookkeeping for you.</p>
