--- a/bookkeeping.html
+++ b/bookkeeping.html
@@ -148,9 +148,9 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 							<h2>Why outsource bookkeeping?</h2>
 							<a class="close" href="#three">&times;</a>
 							<div class="content">
-					<p>By choosing to outsource your bookkeeping to me using ExpensePlus, you can save your church or charity both time and money.
+					<p>By choosing to outsource your bookkeeping to me using ExpensePlus, you can save your organisation both time and money.
 						<a href="https://pdmarfleet.co.uk/#ExpensePlus">ExpensePlus is a cloud-based accounting system</a>, which enables efficient and streamlined remote collaboration between your team and me on a weekly basis.
-						As an ExpensePlus verified bookkeeper, <a href="https://pdmarfleet.co.uk/#about">I have the necessary skills and experience</a> to ensure that your organisation's finances are accurately managed and recorded.  Your team can then focus on your charity's core mission while leaving the financial day-to-day management to me.</p>
+						As an ExpensePlus verified bookkeeper, <a href="https://pdmarfleet.co.uk/#about">I have the necessary skills and experience</a> to ensure that your organisation's finances are accurately managed and recorded and I'm able to provide ongoing advice to ensure a future-proof accounting system for you.  Your team can then focus on your charity's core mission while leaving the financial day-to-day management to me.</p>
 					<div class="center-button">
 						<a href="contact.html" class="button fit primary">Enquire</a>
 						</div>
