--- a/Training-Support.html
+++ b/Training-Support.html
@@ -84,7 +84,7 @@
 							<ul class="features">
 								<li>
 									<header class="package">
-									<h3>Remote Conusltation Packages</h3>
+									<h3>Remote Consultant Packages</h3>
 									</header>
 									<p>from £250 per day</p>
 									<p>With this option, I’ll put together a custom consultation package based on the support you need.</p>
