--- a/Training-Support.html
+++ b/Training-Support.html
@@ -60,16 +60,12 @@
 						</header>
 			
 				<!-- one -->
-				<section id="one" class="wrapper style1 special">
+				<section id="one" class="wrapper style1 special" style="padding: 2.5em 0 1em 0!important;">
 					<div class="inner">
 						<header class="major">
-								<p><a href="https://pdmarfleet.co.uk/#ExpensePlus">ExpensePlus</a> fund accounting software provides excellent free training and support through their website, which is sufficient for many users. However, sometimes additional support from me is helpful if:</p>
-							<div sytle="max-width:60%;">
-								<li>You would benefit from bespoke training.</li>
-								<li>Managing charity accounts is new to you and you would like additional help getting started.</li>
-								<li>You need help sorting out your finances because they are complicated and messy.</li>
-								<li>You want to migrate to ExpensePlus as quickly and easily as possible without having to figure it all out yourself.</li>
-								<li>Or for any other reason you like!</li>		
+								<p>When if comes to charity finances, it can be difficult to find affordable, reliable, and appropriate support to ensure you’re doing things the right way. At times, it can become overwhelming, especially if you’ve a small team with a growing account! I understand your struggle - I have been through it myself. Sometimes you’ll need to ask for an extra pair of experienced hands. That’s where I come in. </p>
+							<p>I believe that every charity or socially purposed organisation should have access to high-quality bookkeeping software and the expert support they need to develop streamlined financial processes. From experence, the best way to do that is by using <a href="https://pdmarfleet.co.uk/#ExpensePlus" target="_blank">ExpensePlus</a> fund accounting software. This cloud based software is specifically designed with people like you in mind. Every charity in the world should be using it. Once you try it, you’ll find it hard to imagine how you operated without it. It will save you time and money while making your accounting processes so much more efficient. But how do you get to that point?</p>
+							<p>To help you get to that place as quickly and easily as possible, I offer the consulting, training and support packages listed below for those interesed in moving to ExpensePlus. Oh, and my day rates are based on income size, to make things as accessable as possible for you.</p>
 							</div>	
 							</header>		
 						</div>
