--- a/Training-Support.html
+++ b/Training-Support.html
@@ -75,7 +75,7 @@
 					<section id="three" class="wrapper style3 special">
 						<div class="inner">
 							<header class="minor">
-								<h2 style="color: #228ea6;">Training & Support Options</h2>
+								<h2 style="color: #59e1ff;">Training & Support Options</h2>
 							</header>
 							<ul class="features">
 								<li>
