--- a/Training-Support.html
+++ b/Training-Support.html
@@ -72,7 +72,7 @@
 					</section>	
 					</article>
 					<!-- packages -->		
-					<section id="three" class="wrapper style3 special">
+					<section id="three" class="wrapper style3 special" style="padding:2em 0 4em 0!important">
 						<div class="inner">
 							<header class="minor">
 								<h2 style="color: #59e1ff;">Training & Support Options</h2>
