--- a/Training-Support.html
+++ b/Training-Support.html
@@ -135,7 +135,7 @@
 									</header>
 									<p>from £750</p>
 									<p>If your organisation is considering migrating to ExpensePlus, the idea of switching to a new system may feel a bit daunting.</p>
-									<p>To help ease the transition, I offer a custom support and training package specifically for charities who would appreciate more in-depth assistance in moving to ExpensePlus as quickly and efficiently as possible.</p></br>				
+									<p style="margin-bottom:3.5em!important">To help ease the transition, I offer a custom support and training package specifically for charities who would appreciate more in-depth assistance in moving to ExpensePlus as quickly and efficiently as possible.</p></br>				
 									<a class="button" href="#popup2">More Info</a>
 																
 									<div id="popup2" class="overlay">
