--- a/bookkeeping.html
+++ b/bookkeeping.html
@@ -93,7 +93,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 														
 									<li>
 										<p style="color:#ffffff!important;margin:0!important;">​Charity income over £1M: </p>
-										<p style="color:#ffffff!important;margin:0!important;">£1350 - £1,650pm</p>	
+										<p style="color:#ffffff!important;margin:0!important;">£1350 - £1,650 per month</p>	
 									</li>
 									<li>
 										<p style="color:#ffffff!important;margin:0!important;">​For charities under £50k:</p>
