--- a/Training-Support.html
+++ b/Training-Support.html
@@ -65,7 +65,7 @@
 						<header class="major">
 								<p>When it comes to charity finances, it can be difficult to find affordable, reliable, and appropriate support to ensure you’re doing things the right way. At times, it can become overwhelming, especially if you’ve a small team with a growing account! I understand your struggle - I have been through it myself. Sometimes we all need to ask for an extra pair of experienced hands to help out. That’s where I come in. </p>
 							<p>I believe that every charity or socially purposed organisation should have access to high-quality bookkeeping software and the experts they need to develop streamlined financial processes. From my experience, the best way to achieve that is by using <a href="https://pdmarfleet.co.uk/#ExpensePlus" target="_blank">ExpensePlus</a> fund accounting software along with consultant support. ExpensePlus provides an amazing cloud based bookkeeping experience, specifically designed with people like you in mind. I provide the expert consultant support you need to go with that.</p>
-							<p>My bookkeeping consulting and migration packages are for those who are using, or would like to be using the ExpensePlus system. My day rates for the services below are based on income size, to make things as accessible as possible for charities of all shapes and sizes.</p>
+							<p>My bookkeeping consulting and migration packages are for those who are using, or would like to be using the ExpensePlus system to save themselves time, money and stress. My day rates for the services below are based on income size, to make things as accessible as possible for charities of all shapes and sizes.</p>
 							</div>	
 							</header>		
 						</div>
