--- a/bookkeeping.html
+++ b/bookkeeping.html
@@ -64,14 +64,14 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 					<div class="inner">
 						<header class="major">
 							<h2 style="color: #228ea6;">What's included?</h2>
-								<p>My Bookkeeping Consultant Package is designed for organisations seeking a cost-effective charity bookkeeping solution along with experienced advice on all aspects of charity accounting best practice. This package not only guarantees accurate and efficient bookkeeping using <a href="https://pdmarfleet.co.uk/#ExpensePlus">ExpensePlus</a> cloud based fund accounting software, but also focuses on collaborating with you to establish a future-proof finance system that can accommodate organisational growth, whether you’ve a small annual income, or one approaching £1Million. As we work together, I will provide ongoing consulting on how to achieve best practices in areas such as financial policies, budgeting, financial analysis, navigating the complexities of restricted donations, and building efficient fund accounting architectures.</p>
+								<p>My BookkeepingPlus Package is designed for organisations seeking a cost-effective charity bookkeeping solution along with experienced advice on all aspects of charity accounting best practice. This package not only guarantees accurate and efficient bookkeeping using <a href="https://pdmarfleet.co.uk/#ExpensePlus">ExpensePlus</a> cloud based fund accounting software, but also focuses on collaborating with you to establish a future-proof finance system that can accommodate organisational growth, whether you’ve a small annual income, or one approaching £1Million. As we work together, I will provide ongoing consulting on how to achieve best practices in areas such as financial policies, budgeting, financial analysis, navigating the complexities of restricted donations, and building efficient fund accounting architectures.</p>
 								<div class="inner">
 									<p>If you're interested in this solution, we'll begin with a free, no-obligation consultation via Zoom. This will help me gain a better understanding of you, your organisation, and your current* ExpensePlus account setup, enabling me to provide you with an accurate quote. In the meantime, please refer to the base price ranges below to get an idea of the costs involved.</p>
 										</div>
-								<a class="button" href="#popup-price"style="color:#ffffff!important; background-color:#46b2cc!important; margin-top:1.5em">See Bookkeeping Prices here</a>
+								<a class="button" href="#popup-price"style="color:#ffffff!important; background-color:#46b2cc!important; margin-top:1.5em">See BookkeepingPlus Prices here</a>
 								<div id="popup-price" class="overlay">
 									<div class="popup">
-										<h2 style="color:#ffffff;">Bookkeeping Consultant Package</h2>
+										<h2 style="color:#ffffff;">BookkeepingPlus Package</h2>
 										<p style="color:#ffffff!important; font-size: 20px!important;">Packages from £545 per month</p>
 										
 										<div class="content">
