--- a/Training-Support.html
+++ b/Training-Support.html
@@ -141,7 +141,7 @@
 									</header>
 									<p>from £130 per month</p>
 									<p>This option is for organisations who have a volunteer bookkeeper and are already using ExpensePlus, but would appreciete expert ongoing support.</p>
-									<p>The package is based on a 30-day rolling contract and includes weekly audits of your bookkeeping, feedback to your bookkeeper to quickly catch any adjustments, priority email support for questions related to using ExpensePlus, as well as advice for your trustees on financial best practices and good governance.</p>
+									<p>The package is based on a 30-day rolling contract and includes weekly audits of your bookkeeping, feedback to quickly catch any adjustments, priority email support for questions related to using ExpensePlus, as well as advice for your trustees on financial best practices and good governance.</p>
 									<a class="button" href="#popup3">Click for Prices</a>
 																
 									<div id="popup3" class="overlay">
