--- a/index.html
+++ b/index.html
@@ -23,11 +23,12 @@
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	<!-- Meta -->
 		<meta property=’og:title’ content='PD Marfleet Accounting'/>
-		<meta property=’og:image’ content='https://i.ibb.co/fNrxNqh/PD-MARFLEET-WEBSITE-THUMB.png>
+		<meta property=’og:image’ content='https://i.ibb.co/fNrxNqh/PD-MARFLEET-WEBSITE-THUMB.png'/>
 		<meta property=’og:description’ content='Helping Charities Streamline Thier Accounts'/>
 		<meta property=’og:url’ content='https://pdmarfleet.co.uk'/>
 		<meta property='og:image:width' content='1200' />
 		<meta property='og:image:height' content='627' />
+		<meta property="og:type" content='website'/>
 	</head>
 	<body class="landing is-preload">
 
