--- a/index.html
+++ b/index.html
@@ -22,13 +22,11 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	<!-- Meta -->
-		<meta property=’og:title’ content='PD Marfleet Accounting'/>
-		<meta property=’og:image’ content='https://i.ibb.co/fNrxNqh/PD-MARFLEET-WEBSITE-THUMB.png'/>
-		<meta property=’og:description’ content='Providing cost-effective, outsourced bookkeeping services to charities, churches and non-profits, along with advice, support and training packages for organisations seeking to streamline their accounting processes.'/>
-		<meta property=’og:url’ content='https://pdmarfleet.co.uk'/>
-		<meta property='og:image:width' content='1200' />
-		<meta property='og:image:height' content='627' />
-		<meta property="og:type" content='website'/>
+	<meta property="og:type" content="website">
+	<meta property="og:title" content="PD Marfleet Accounting">
+	<meta property="og:url" content="https://pdmarfleet.co.uk">
+	<meta property="og:image" content="https://i.ibb.co/fNrxNqh/PD-MARFLEET-WEBSITE-THUMB.png">
+	<meta property="og:description" content="Providing cost-effective, outsourced bookkeeping services to charities and non-profits, along with advice, support and training packages for organisations seeking to upgrade their accounting processes.">
 	</head>
 	<body class="landing is-preload">
 
