--- a/Training-Support.html
+++ b/Training-Support.html
@@ -16,14 +16,30 @@
 
   gtag('config', 'G-BHM0SHWB0T');
 </script>
+
 		<title>Training and Support</title>
 		<meta charset="utf-8" />
-		<link rel="icon" type="image/x-icon" href="/images/A2-PDM Fav.png">
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
-	<body class="is-preload">
+
+	<!-- Favicon -->
+	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+	<link rel="manifest" href="/site.webmanifest">
+	<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+	<meta name="msapplication-TileColor" content="#da532c">
+	<meta name="theme-color" content="#ffffff">
+	<!-- Meta -->
+	<meta property="og:type" content="website">
+	<meta property="og:title" content="PD Marfleet Accounting">
+	<meta property="og:url" content="https://pdmarfleet.co.uk">
+	<meta property="og:image" content="https://i.ibb.co/fNrxNqh/PD-MARFLEET-WEBSITE-THUMB.png">
+	<meta property="og:description" content="Providing cost-effective, outsourced bookkeeping services to charities and non-profits, along with advice, support and training packages for organisations seeking to upgrade their accounting processes.">
+	</head>
+	<body class="landing is-preload">
 
 		<!-- Page Wrapper -->
 			<div id="page-wrapper">
