--- a/Training-Support.html
+++ b/Training-Support.html
@@ -90,7 +90,7 @@
 								<header class="minor">
 									<h2 style="color: #59e1ff;">Training & Support Options</h2>
 								</header>
-							<ul class="features">
+							<ul class="support-package">
 								<!-- Support Package Start -->
 								<li>
 									<a id="support"></a>
