--- a/Training-Support.html
+++ b/Training-Support.html
@@ -88,7 +88,7 @@
 					<section id="three" class="wrapper style3 special" style="padding:2em 0 4em 0!important">
 						<div class="inner">
 								<header class="minor">
-									<h2 style="color: #59e1ff;">Training & Support Options</h2>
+									<h2 style="color: #ffffff;">Training & Support Options</h2>
 								</header>
 							<ul class="support-package">
 								<!-- Support Package Start -->
