--- a/Training-Support.html
+++ b/Training-Support.html
@@ -269,7 +269,7 @@
 									<div style="margin-top:-200px; margin-bottom: 200px"></div>
 									<header class="package">
 									<h3>What Others Say</h3>
-									<div style = "position:relative; top:-60x;font-size:6px!important">
+									<div style = "position:relative; top:-60px;font-size:10px!important">
 									<p><a href="https://goo.gl/maps/AV6ehAY52am5TFgz8">on Google Reviews</a></p></div>
 									</header>
 									<img style="max-width: 30%!important;border-radius: 30px;" src="/images/ExpensePlus-reviews-Resurrected-bites.png">
