--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 					<div class="inner">
 						<header class="minor">
 							<h2>What others say</h2>
-							<p style="font-size:10px!important"><a href="https://goo.gl/maps/AV6ehAY52am5TFgz8">on Google Reviews</a></p>
+							<p style="font-size:.9em!important; margin-top:-.9em!important"><a href="https://goo.gl/maps/AV6ehAY52am5TFgz8">on Google Reviews</a></p>
 						</header>
 						<ul class="features">
 							<li>
