--- a/Training-Support.html
+++ b/Training-Support.html
@@ -150,7 +150,7 @@
 									<a id="supportplus"></a>
 									<div id=”supportplus” style="margin-top:-200px; margin-bottom: 200px"></div>
 									<header class="package">
-									<h3>SupportPlus Package</h3>
+									<h3>SupportPLUS Package</h3>
 									</header>
 									<p>from £130 per month</p>
 									<p>This option is for organisations who have a volunteer bookkeeper and are already using ExpensePlus, but would appreciete expert ongoing support.</p>
