--- a/bookkeeping.html
+++ b/bookkeeping.html
@@ -81,7 +81,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 								<div class="inner">
 									<p>If you're interested in this solution, we'll begin with a free, no-obligation consultation via Zoom. This will help me gain a better understanding of you, your organisation, and your current* ExpensePlus account setup, enabling me to provide you with an accurate quote. In the meantime, please refer to the base price ranges below to get an idea of the costs involved.</p>
 										</div>
-								<a class="button" href="#popup-price"style="color:#ffffff!important; background-color:#46b2cc!important; margin-top:1.5em">See BookkeepingPlus Prices here</a>
+								<a class="button" href="#popup-price"style="color:#ffffff!important; background-color:#46b2cc!important; margin-top:1.5em">See Bookkeeping<span style="color: #fff900;font-weight: 900;">Plus</span> Prices here</a>
 								<div id="popup-price" class="overlay">
 									<div class="popup">
 										<h2 style="color:#ffffff;">Bookkeeping<span style="color: #fff900;font-weight: 900;">Plus</span> Package</h2>
