--- a/Training-Support.html
+++ b/Training-Support.html
@@ -150,7 +150,7 @@
 									<a id="supportplus"></a>
 									<div id=”supportplus” style="margin-top:-200px; margin-bottom: 200px"></div>
 									<header class="package">
-									<h3>Support<span style="color: #fff900;font-weight: 900;">Plus</span> Package</h3>
+									<h3>Support<span style="color: #ffcd00;font-weight: 900;">Plus</span> Package</h3>
 									</header>
 									<p>from £130 per month</p>
 									<p>This option is for organisations who have a volunteer bookkeeper and are already using ExpensePlus, but would appreciete expert ongoing support.</p>
@@ -159,10 +159,10 @@
 																
 									<div id="popup3" class="overlay">
 										<div class="popup">
-											<h2>Support<span style="color: #fff900;font-weight: 900;">Plus</span> Package</h2>
+											<h2>Support<span style="color: #ffcd00;font-weight: 900;">Plus</span> Package</h2>
 											<a class="close topright" href="#">&times;</a>
 											<div class="content">
-												<p>Below are the standard day rates my Support<span style="color: #fff900;font-weight: 900;">Plus</span> Package which runs on rolling 30 day contact for as long as you need the support.</p>
+												<p>Below are the standard day rates my Support<span style="color: #ffcd00;font-weight: 900;">Plus</span> Package which runs on rolling 30 day contact for as long as you need the support.</p>
 												<section id="Reviews" style="margin-top:-200px; margin-bottom: 250px"></section>
 					
 												<div class="inner">
