--- a/Training-Support.html
+++ b/Training-Support.html
@@ -203,7 +203,7 @@
 									<a id="migration"></a>
 									<div id=”migration” style="margin-top:-200px; margin-bottom: 200px"></div>
 									<header class="package">
-									<h3>Migration Support Package</h3>
+									<h3>Migration Package</h3>
 									</header>
 									<p>from £750</p>
 									<p>If your organisation is considering migrating to ExpensePlus, the idea of switching to a new system may feel a bit daunting.</p>
@@ -212,7 +212,7 @@
 																
 									<div id="popup2" class="overlay">
 										<div class="popup">
-											<h2>Migration Support Package from £750</h2>
+											<h2>Migration Package from £750</h2>
 											<a class="close" href="#">&times;</a>
 											<a class="close topright" href="#">&times;</a>
 											<div class="content">
