--- a/Training-Support.html
+++ b/Training-Support.html
@@ -251,7 +251,7 @@
 										<p>&#8226; The setup of ExpensePlus including User Accounts, Opening Balances, Bank Accounts, Funds, Budget Categories, and Invoice Templates.</p>
 										<p>&#8226; I'll oversee ‘going live’ on ExpensePlus, and will monitor and adjust the setup as necessary.</p>
 										<p>&#8226; The provision of basic ExpensePlus training for internal stakeholders (Basic Users, Finance Assistants, Budget Holders & Trustees) in the form of high quality, on-demand video training.</p>
-										<p>&#8226; With the migration complete, I’ll do a comprehensive handover with your bookkeeper during a 2-hour training package via Zoom. If it would be helpful, you may wish to use my Support<span style="color: #ffcd00;font-weight: 900;">Plus</span> Package at this stafe, or alternatively, <a href="bookkeeping.html">you may decide to outsource your bookkeeping to me instead</a> to free up your team.</p>
+										<p>&#8226; With the migration complete, I’ll do a comprehensive handover with your bookkeeper during a 2-hour training package via Zoom. If it would be helpful, you may wish to use my <a href="https://pdmarfleet.co.uk/training-support#support-plus">Support<span style="color: #ffcd00;font-weight: 900;">Plus</span> Package</a> at this stage, or alternatively, <a href="bookkeeping.html">you may decide to outsource your bookkeeping to me</a> to free up your team.</p>
 										<p>&#8226; Finally, I’ll provide 1 month of priority email support for your team if they have any further questions.</p>
 										<p>&#8226; Of course, if you find you need adhoc support beyond this, you can easily access it via my <a href="https://pdmarfleet.co.uk/training-support#popup1">Remote Consultation Packages here.</a></p>
 									
