--- a/Policies copy.html
+++ b/Policies copy.html
@@ -19,7 +19,7 @@
 		<title>PD Marfleet Accoutning - Policies</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="../Website%20(Test.v2)/assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
