--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
 <!--
-	Spectral by HTML5 UP
+	Spectral by HTML5 UP.
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
@@ -18,9 +18,9 @@
 		<title>PD Marfleet Accounting</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="../Website%20(Test.v2)/assets/css/main.css" />
+		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-	<!-- Favicon v-->
+	<!-- Favicon -->
 			<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
 	<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
 	<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
@@ -123,9 +123,9 @@
 								<h2>MORE ABOUT ME<br /></h2>
 								<p style="text-align: center;">I have worked in the charity sector as a finance officer for almost a decade, gaining extensive experience in fund accounting and charity finance regulations as a result. I have also served on a leadership team of a church for over 8 years, so I understand the unique challenges of managing medium sized charity accounts, often with only a small or volunteer team.</p>
 
-								<p style="text-align: center;">Over the years that I’ve worked in this sector, it’s been clear that many start up third sector organisations grow to a point where they are too large to run their own finances from off an excel sheet anymore, but still way too small to be able to justify a staffed finance team with the relevant experience. For some, they find a volunteer who has both the experience and time to give to them, an ideal but increasingly rare solution.</p>
+								<p style="text-align: center;">Over the years that I’ve worked in this sector, it’s been clear that many third sector organisations grow to a point where they are too large to run their own finances off a spreadsheet anymore, but still way too small to be able to justify a staffed finance team with the relevant experience. For some, they find a volunteer who has both the experience and time to give to them, an ideal but increasingly rare solution.</p>
 									
-								<p style="text-align: center;">For those without that option, I'm pleased to be able to offer small to medium sized charities, a cost effective alternative to in-house finance experts.</p>
+								<p style="text-align: center;">For those without that option, I'm pleased to be able to offer charities a cost effective alternative to in-house finance experts.</p>
 							</div>
 						</section>
 				</section>
@@ -134,7 +134,7 @@
 					<div class="inner">
 						<header class="minor">
 							<h2>What others say</h2>
-							<p sytle="font-size:10px!important"><a href="https://goo.gl/maps/AV6ehAY52am5TFgz8">on Google Reviews</a></p>
+							<p style="font-size:.9em!important; margin-top:-.9em!important"><a href="https://www.google.com/maps/place/PD+Marfleet+Accounting/@45.8028319,-8.5003746,4z/data=!4m8!3m7!1s0x85a49e458d01948b:0x8a23e834d160a476!8m2!3d47.73855!4d12.5088275!9m1!1b1!16s%2Fg%2F11ssnp2wjq?hl=en-US&entry=ttu">on Google Reviews</a></p>
 						</header>
 						<ul class="features">
 							<li>
