--- a/snipcart.html
+++ b/snipcart.html
@@ -20,7 +20,7 @@
 		<meta charset="utf-8" />
 		<link rel="icon" type="image/x-icon" href="/images/A2-PDM Fav.png">
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="../Website%20(Test.v2)/assets/css/main.css" />
+		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
