--- a/Contact.html
+++ b/Contact.html
@@ -49,6 +49,7 @@
 												<li><a href="index.html">Home</a></li>
 												<li><a href="Bookkeeping.html">Bookkeeping</a></li>
 												<li><a href="Training-Support.html">Training & Support</a></li>
+												<li><a href="Resources.html">Resources</a></li>
 												<li><a href="Contact.html">Contact</a></li>
 											</ul>
 										</ul>
