--- a/Policies.html
+++ b/Policies.html
@@ -40,6 +40,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 											<li><a href="index.html">Home</a></li>
 											<li><a href="Bookkeeping.html">Bookkeeping</a></li>
 											<li><a href="Training-Support.html">Training & Support</a></li>
+											<li><a href="Resources.html">Resources</a></li>
 											<li><a href="Contact.html">Contact</a></li>
 										</ul>
 									</ul>
